@@ -6,6 +6,7 @@ Changes in 3.1.7
 * FIX: netatalk: SIGHUP would kill the process instead of being resent
        to the other Netatalk processes, bug #579
 * FIX: afpd: Solaris locking problem, bug #559
+* FIX: Handling of malformed UTF8 strings, bug #524
 
 Changes in 3.1.6
 ================
